vote comment text wrap and button fix

--- a/themes/generic/delibera_style.css
+++ b/themes/generic/delibera_style.css
@@ -1041,6 +1041,7 @@ color: #777;
     font-weight: bold;
     padding: 0.25em 0.5em;
     text-transform: uppercase;
+    cursor: pointer;
 }
 
 /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
